--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@ fbq('track', 'PageView');
         <img src="manager.jpg" alt="Менеджер">
       </div>
       <p>Для зв'язку напишіть нашому менеджеру:</p>
-      <a href="https://t.me/vasia_mreo"target="_blank" class="btn-telegram">
+      <a href="https://t.me/Volodymir_tsc"target="_blank" class="btn-telegram">
         <i class="fa-brands fa-telegram"></i> Telegram
       </a>
     </div>
@@ -551,7 +551,7 @@ fbq('track', 'PageView');
     });
   });
 </script>
-<a href="https://t.me/vasia_mreo" 
+<a href="https://t.me/Volodymir_tsc" 
    target="_blank" 
    class="telegram-float-mobile" 
    id="telegram-button"
